# science_video_OCR

./: .gitignore  Dockerfile  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
scripts/: entrypoint.sh  install_docker.sh
static/: script.js
static/css/: styles.css
templates/: index.html
