[tool.poetry]
name = "science-video-ocr"
version = "0.1.0"
description = ""
authors = ["Frank Liao <yufanliaocestlavie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
blinker = "1.8.2"
bottle = "0.13.1"
click = "8.1.7"
easyocr = "1.7.2"
filelock = "3.16.1"
flask = "3.0.3"
flask-cors = "5.0.0"
fsspec = "2024.9.0"
gunicorn = "23.0.0"
imageio = "2.35.1"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
lazy-loader = "0.4"
markupsafe = "2.1.5"
mpmath = "1.3.0"
networkx = "3.3"
ninja = "1.11.1.1"
numpy = "2.1.1"
opencv-python = "4.10.0.84"
opencv-python-headless = "4.10.0.84"
packaging = "24.1"
pillow = "10.4.0"
proxy-tools = "0.1.0"
pyclipper = "1.3.0.post5"
pytesseract = "0.3.13"
python-bidi = "0.6.0"
pywebview = "5.2"
pyyaml = "6.0.2"
scikit-image = "0.24.0"
scipy = "1.14.1"
shapely = "2.0.6"
sympy = "1.13.3"
tifffile = "2024.9.20"
torch = "2.4.1"
torchvision = "0.19.1"
typing-extensions = "4.12.2"
werkzeug = "3.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
